[tool.poetry]
name = "chess-llm"
version = "0.1.0"
description = ""
authors = ["rahzaazhar <azhar199865@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
ollama = "^0.1.9"
chess = "^1.10.0"
numpy = "^1.26.4"
streamlit = "^1.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
